--- a/src/plugins/core/loupedeckct/prefs/css/loupedeck.css
+++ b/src/plugins/core/loupedeckct/prefs/css/loupedeck.css
@@ -142,6 +142,12 @@ loupedeckRowType {
 	width: 180px;
 }
 
+.importSettings {
+	margin: 10px 0px;
+	text-align: center;
+	width: 180px;
+}
+
 .applyTopDeviceToAll {
 	margin: 10px 0px;
 	text-align: center;
